# midi-player-yampa

./: .gitignore  midi-player.cabal  stack.yaml
app/: Main.hs  Main.html
src/Sound/: MidiPlayer.hs
